# Crystal

./: .gitignore  CMakeLists.txt  README.md
CrystalAlgrithm/Basic/: BasicTest.cu  Common.cu  Common.cuh  Export_dll.cuh  Geometry.cu  Geometry.cuh  Spectrum.cu  Spectrum.cuh  Transform.cu  Transform.cuh  cudaTextureTest.cu
CrystalAlgrithm/DataMapper/: DataMapper.h  DataMapperPreset.h  TF_1D_Trapezoidal.cpp  TF_1D_Trapezoidal.h  TF_2D_Trapezoidal.cpp  TF_2D_Trapezoidal_GF.cpp  TF_2D_Trapezoidal_GF.h  TransferFunction.cpp  TransferFunction.h
CrystalAlgrithm/DataOrganiz/: DataOrganiz.cpp  DataOrganiz.h  DataPreset.h
CrystalAlgrithm/Light/: Light.cpp  Light.h  LightPreset.h
CrystalAlgrithm/Postprocessor/: Postprocessor.cpp  Postprocessor.h
CrystalAlgrithm/Preprocessor/: Preprocessor.cpp  Preprocessor.h
CrystalAlgrithm/Reader/: MedicalDataReader.h  MedicalImagesInfo.h  MhdFileReader.cpp  MhdFileReader.h  PresetCamera.h  PresetData.h  PresetDataMapper.h  PresetLight.h  PresetScene.h  Reader.h  ScenePreset.h
CrystalAlgrithm/Scene/: PresetScene.cpp  PresetScene.h  Scene.cpp  Scene.h
CrystalAlgrithm/VisInteractor/: ArcballCamera.h  Camera.cpp  Camera.h  CameraArcball.cpp  CameraArcball.h  CameraFps.cpp  CameraFps.h  CameraPreset.h  FpsCamera.h
CrystalAlgrithm/Visualizer/: DeltaTracing.cpp  DeltaTracing.cu  DeltaTracing.h  EmisstionWithAbsorption.cpp  EmisstionWithAbsorption.cu  EmisstionWithAbsorption.h  ExposureRender.cpp  ExposureRender.cu  ExposureRender.h  FrameBuffer.cpp  FrameBuffer.h  RayCastingWithPhongShading.cpp  RayCastingWithPhongShading.cu  RayCastingWithPhongShading.h  Visualizer.cpp  Visualizer.h
CrystalGUI/DebugTools/: DebugStd.cpp  DebugStd.h
CrystalGUI/Display/: DisplayWidget.cpp  DisplayWidget.h
CrystalGUI/Main/: MainWindow.cpp  MainWindow.h  main.cpp
CrystalGUI/QtDataMapper/: QtDataMapper.cpp  QtDataMapper.h  QtNodePropertiesWidget.cpp  QtNodePropertiesWidget.h  QtTF_1D_Trapezoidal.cpp  QtTF_1D_Trapezoidal.h  QtTF_2D_Trapezoidal_GF.cpp  QtTF_2D_Trapezoidal_GF.h  QtTfFuncDock.cpp  QtTfFuncDock.h  QtTfFuncGraphicsView_1D.cpp  QtTfFuncGraphicsView_1D.h  QtTsFuncDock.cpp  QtTsFuncDock.h  QtTsFuncGraphicsView_1D.cpp  QtTsFuncGraphicsView_1D.h
CrystalGUI/QtLight/: QtLight.h
CrystalGUI/QtPostprocessor/: QtPostprocessor.h
CrystalGUI/QtPreprocessor/: QtPreprocessor.h
CrystalGUI/QtReader/: ParserLight.h  ParserScene.cpp  ParserScene.h  ParserTransferFunction.cpp  ParserTransferFunction.h  QtMedicalDataReader.cpp  QtMedicalDataReader.h  SceneParser.cpp  SceneParser.h
CrystalGUI/QtVisInteractor/: QtArcballCamera.h  QtFpsCamera.h  QtVisInteractor.cpp  QtVisInteractor.h
CrystalGUI/QtVisualizer/: QtRenderThread.cpp  QtRenderThread.h  QtVisualizer.cpp  QtVisualizer.h
CrystalGUI/Utility/: Common.h  Utility.cpp  Utility.h
Examples/: Light.xml  Scene.xml  TransferFunction.xml
Examples/Example1/: Scene.xml  TsFunc.xml
Resources/qss/: DisplayMainWindow.qss  InitialMainWindow.qss  QtTF_1D_Trapezoidal.qss
